Create categorie's endopoints for admins
